--- a/components/v-link/index.wxss
+++ b/components/v-link/index.wxss
@@ -3,19 +3,19 @@
   display: inline-flex;
   flex-direction: row;
   padding: 10rpx;
-  width:90rpx;
+  width: 90rpx;
 }
 
-.container image {
+.container .link-img {
   width: 32rpx;
   height: 28rpx;
 }
 
-.container text {
-  font-size: 24rpx;
-  line-height: 24rpx;
-  color: #bbb;
+.container .link-text {
   position: relative;
   bottom: 10rpx;
   left: 6rpx;
+  font-size: 24rpx;
+  line-height: 24rpx;
+  color: #bbb;
 }
